--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,82 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container-fluid{
+  /* background-color: cadetblue; */
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(222,233,148,1) 100%);
+  padding-left: 150px;
+  padding-right: 150px;
+  padding-top:10px;
+  padding-bottom:10px;
+}
+.navbar-brand{
+  color:black;
+}
+.container-fluid .active{
+  background-color: rgb(94, 94, 145);
+  padding:10px;
+  border-radius: 12px;
+  color:white;
+}
+.container-fluid .navbar-brand:hover{
+  cursor: pointer;
+  /* background-color: rgb(94, 94, 145); */
+  color:blueviolet;
+}
+.card{
+  width: 100%;
+  height: max-content;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-top: 100px;
+  padding-bottom:100px;
+}
+.card-val-1{
+  background-image: url('img/blood_camp.JPG');
+  width: 400px;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: 400px 300px; 
+  border: 2px solid black;
+  padding: 2%;
+  margin:2%;
+  /* margin: 5%; */
+  cursor: pointer;
+  border-radius: 12px;
+}
+.card-val-2{
+  background-image: url('img/donation_center.JPG');
+  width: 400px;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: 400px 300px; 
+  border: 2px solid black;
+  padding: 2%;
+  margin:2%;
+  cursor: pointer;
+  /* margin: 5%; */
+  border-radius: 12px;
+}
+.card-val-3{
+  background-image: url('img/blood\ image.JPG');
+  width: 400px;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: 400px 300px; 
+  border: 2px solid black;
+  padding: 2%;
+  margin:2%;
+  cursor: pointer;
+  /* margin: 5%; */
+  border-radius: 12px;
+}
+.card-val-1:hover{
+  box-shadow: 1px 1px 1px 2px  rgb(73, 67, 67);
+}
+.card-val-2:hover{
+  box-shadow: 1px 1px 1px 2px  rgb(73, 67, 67);
+}
+.card-val-3:hover{
+  box-shadow: 1px 1px 1px 2px  rgb(73, 67, 67);
 }
