--- a/src/index.css
+++ b/src/index.css
@@ -8,16 +8,18 @@ body {
 }
 .container-fluid{
   /* background-color: cadetblue; */
+  width: 90%;
   background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(222,233,148,1) 100%);
   padding-left: 150px;
   padding-right: 150px;
   padding-top:10px;
   padding-bottom:10px;
+  border-radius: 23px;
 }
 .navbar-brand{
   color:black;
 }
-.container-fluid .active{
+.active{
   background-color: rgb(94, 94, 145);
   padding:10px;
   border-radius: 12px;
@@ -28,14 +30,34 @@ body {
   /* background-color: rgb(94, 94, 145); */
   color:blueviolet;
 }
+.my-view{
+  width: 100%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  /* text-shadow: 10px 10px 10px 10px blue ;.. */
+}
+.card-description{
+  text-align: center;
+  color: black;
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 20px;
+  font-style: oblique;
+  /* text-shadow:; */
+}
 .card{
   width: 100%;
   height: max-content;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding-top: 100px;
-  padding-bottom:100px;
+  padding-top: 60px;
+  padding-bottom:60px;
+  background-color:rgb(155, 195, 116);
+  /* align-items: center; */
+  
 }
 .card-val-1{
   background-image: url('img/blood_camp.JPG');
@@ -45,10 +67,10 @@ body {
   background-size: 400px 300px; 
   border: 2px solid black;
   padding: 2%;
-  margin:2%;
-  /* margin: 5%; */
+  margin: 0 auto;
   cursor: pointer;
   border-radius: 12px;
+  margin-bottom: 23px;
 }
 .card-val-2{
   background-image: url('img/donation_center.JPG');
@@ -58,10 +80,11 @@ body {
   background-size: 400px 300px; 
   border: 2px solid black;
   padding: 2%;
-  margin:2%;
+  margin:0 auto;
   cursor: pointer;
   /* margin: 5%; */
   border-radius: 12px;
+  margin-bottom: 23px;
 }
 .card-val-3{
   background-image: url('img/blood\ image.JPG');
@@ -75,6 +98,8 @@ body {
   cursor: pointer;
   /* margin: 5%; */
   border-radius: 12px;
+  margin:0 auto;
+  margin-bottom: 23px;
 }
 .card-val-1:hover{
   box-shadow: 1px 1px 1px 2px  rgb(73, 67, 67);
@@ -84,4 +109,31 @@ body {
 }
 .card-val-3:hover{
   box-shadow: 1px 1px 1px 2px  rgb(73, 67, 67);
+}
+
+/* this need to be added into the  key frame*/
+
+@media (max-width: 900px){
+  .menu-icon{
+    width: 25px;
+    height: 25px;
+    background-image: url('img/menu.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 25px 25px;
+    cursor: pointer;
+    /* position: absolute;
+    left: 60px;
+    top: 25px; */
+  }
+  .navbar-brand{
+    display: none;
+  }
+  .navbar .container-fluid{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 20px;
+  }
+  
 }
