--- a/src/index.css
+++ b/src/index.css
@@ -62,14 +62,15 @@ body {
   flex-direction: row;
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color:rgb(155, 195, 116);
+  /* background-color:rgb(155, 195, 116); */
+  background: linear-gradient(#eecda3,#ef629f 100%);
   position: relative;
   border-radius: 23px;
   /* margin: 0 auto; */
   /* align-items: center; */
 }
 .card-val-1{
-  background-image: url('img/blood_camp.JPG');
+  background-image: url('img/54sc_qami_220606.jpg');
   /* width: 400px; */
   width: 40%;
   height: 300px;
@@ -107,7 +108,7 @@ body {
   top: -16px;
 }
 .card-val-3{
-  background-image: url('img/blood\ image.JPG');
+  background-image: url('img/blood-character.JPG');
   width: 40%;
   height: 300px;
   background-repeat: no-repeat;
@@ -195,7 +196,7 @@ body {
 /* it is for the content view that is with image and the text*/
 .content-view{
   width: 90%;
-  height:max-content;
+  /* height:max-content; */
   /* border: 2px solid black; */
   margin-left: 5%; margin-top:40px;
   margin-bottom: 19px;
@@ -205,7 +206,8 @@ body {
   flex-wrap: wrap;
   padding: 19px;  
   justify-content: center;
-  background-color:rgb(155, 195, 116);
+  /* background-color:rgb(155, 195, 116); */
+  background: linear-gradient(#eecda3,#ef629f 100%);
 }
 
 .blood-type-view{
@@ -222,7 +224,7 @@ body {
 }
 .image-view{
   width: 60%;
-  height: 460px;
+  /* height: 460px; */
   /* border: 2px solid black; */
   border-radius: 16px;
   padding: 4px;
@@ -231,7 +233,7 @@ body {
   width: 100%;
   height: 320px;
   border: 2px solid black;
-  background-image: url('img/blood-donation.JPG');
+  background-image: url('img/ze23_cbcg_220606.jpg');
   /* background: no-repeat; */
   background-size: 100% 300px;
   border-radius: 12px;
@@ -316,8 +318,6 @@ tr:last-child.last-one{
   }
   
 }
-
-
 
 @media (max-width: 760px){
   .card-val-1{
