--- a/src/CSS/DetailsFill.css
+++ b/src/CSS/DetailsFill.css
@@ -9,6 +9,13 @@ form{
 .form-label{
     font-weight: 700;
 }
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
 button{
     padding: 8px;
     border-radius: 10px;
