--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #DAF5FF;
 }
 .container-fluid{
   /* background-color: cadetblue; */
   width: 90%;
-  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(222,233,148,1) 100%);
+  /* background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(222,233,148,1) 100%); */
+  background-color: #B9E9FC;
   padding-left: 150px;
   padding-right: 150px;
   padding-top:10px;
@@ -62,21 +64,17 @@ body {
   flex-direction: row;
   padding-top: 60px;
   padding-bottom: 60px;
-  /* background-color:rgb(155, 195, 116); */
-  background: linear-gradient(#eecda3,#ef629f 100%);
+  background-color: #A5D7E8;
   position: relative;
   border-radius: 23px;
-  /* margin: 0 auto; */
-  /* align-items: center; */
 }
 .card-val-1{
   background-image: url('img/54sc_qami_220606.jpg');
-  /* width: 400px; */
   width: 40%;
   height: 300px;
   background-repeat: no-repeat;
   background-size: 100% 300px; 
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 2%;
   margin: 0 auto;
   cursor: pointer;
@@ -84,10 +82,20 @@ body {
   margin-bottom: 23px;
   position: relative;
   top: 0;
+  animation: card-val-1 3s ease-in-out;
+  box-shadow: 2px 2px 1px 2px rgb(106, 91, 91);
 }
-.card-val-1:hover{
+@keyframes card-val-1 {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+/* .card-val-1:hover{
   top: -16px;
-}
+} */
 
 .card-val-2{
   background-image: url('img/donation_center.JPG');
@@ -95,7 +103,7 @@ body {
   height: 300px;
   background-repeat: no-repeat;
   background-size: 100% 300px; 
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 2%;
   margin:0 auto;
   cursor: pointer;
@@ -103,17 +111,27 @@ body {
   margin-bottom: 23px;
   position: relative;
   top: 0;
+  animation: card-val-2 3s ease-in-out;
+  box-shadow: 2px 2px 1px 2px rgb(106, 91, 91);
 }
-.card-val-2:hover{
+@keyframes card-val-2 {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+/* .card-val-2:hover{
   top: -16px;
-}
+} */
 .card-val-3{
   background-image: url('img/blood-character.JPG');
   width: 40%;
   height: 300px;
   background-repeat: no-repeat;
   background-size: 100% 300px; 
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 2%;
   margin:2%;
   cursor: pointer;
@@ -122,11 +140,22 @@ body {
   margin-bottom: 23px;
   position: relative;
   top: 0;
+  animation: card-val-3 3s ease-in-out;
+  box-shadow: 2px 2px 1px 2px rgb(106, 91, 91);
 }
-.card-val-3:hover{
+@keyframes card-val-3 {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
+/* .card-val-3:hover{
   top: -16px;
-}
-.card-desc-1{
+} */
+/* .card-desc-1{
   width: max-content;
   position: relative;
   top: 40%;
@@ -140,8 +169,8 @@ body {
   border-radius: 12px;
   opacity: 0;
   background-color: rgb(112, 173, 199);
-}
-.card-desc-2{
+} */
+/* .card-desc-2{
   width: max-content;
   position: relative;
   top: 40%;
@@ -156,8 +185,8 @@ body {
   opacity: 0;
   background-color: rgb(112, 173, 199);
 
-}
-.card-desc-3{
+} */
+/* .card-desc-3{
   width: max-content;
   position: relative;
   top: 40%;
@@ -169,29 +198,18 @@ body {
   border: 4px solid black;
   backdrop-filter: blur(10px);
   border-radius: 12px;
-  opacity: 0;
   background-color: rgb(112, 173, 199);
-}
+} */
 .card-val-1:hover{
-  box-shadow: 1px 1px 1px 2px  rgb(73, 67, 67);
-  opacity: 1;
+  box-shadow: 6px 3px 6px 3px rgb(106, 91, 91);
 }
 .card-val-2:hover{
-  box-shadow: 1px 1px 1px 2px  rgb(73, 67, 67);
+  box-shadow: 6px 3px 6px 3px rgb(106, 91, 91);
 }
 .card-val-3:hover{
-  box-shadow: 1px 1px 1px 2px  rgb(73, 67, 67);
-  visibility: visible;
+  box-shadow: 6px 3px 6px 3px rgb(106, 91, 91);
 }
-.card:hover .card-desc-1{
-  opacity: 1;
-}
-.card:hover .card-desc-2{
-  opacity: 1;
-}
-.card:hover .card-desc-3{
-  opacity: 1;
-}
+
 
 /* it is for the content view that is with image and the text*/
 .content-view{
@@ -207,14 +225,14 @@ body {
   padding: 19px;  
   justify-content: center;
   /* background-color:rgb(155, 195, 116); */
-  background: linear-gradient(#eecda3,#ef629f 100%);
+  /* background: linear-gradient(#eecda3,#ef629f 100%); */
 }
 
 .blood-type-view{
   height: max-content;
   border: 2px solid black;
   border-radius: 12px;
-  background-color: rgb(173, 136, 136);
+  background-color: #B0DAFF;
   margin-right: 23px;
   margin-bottom: 16px;
 }
@@ -232,12 +250,14 @@ body {
 .image{
   width: 100%;
   height: 320px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   background-image: url('img/ze23_cbcg_220606.jpg');
   /* background: no-repeat; */
   background-size: 100% 300px;
   border-radius: 12px;
   /* background-position: center; */
+  box-shadow: 2px 2px 1px 2px rgb(106, 91, 91);
+
 }
 .image:hover{
   box-shadow: 4px 2px 4px 2px rgb(106, 91, 91);
@@ -287,13 +307,19 @@ tr:last-child.last-one{
   margin-left: 5%;
   border-radius: 19px;
   font-size: 19px;
-  font-weight: 600;
-  background-color: rgb(194, 192, 192);
+  font-weight: 700;
+  /* background-color: rgb(194, 192, 192); */
+  /* background-color: #FEFF86;*/
+  background-color: #95BDFF;
   /* color: whitesmoke; */
   margin-bottom: 16px;
+  /* color: white; */
+}
+.blood-detail-donor{
+  box-shadow: 4px 2px 4px 2px rgb(106, 91, 91);
 }
 .donor-heading{
-  color: blueviolet;
+  color: black;
 }
 /* this need to be added into the  key frame*/
 
@@ -316,7 +342,12 @@ tr:last-child.last-one{
     align-items: flex-start;
     padding-left: 20px;
   }
-  
+  .image-view{
+    width: 100%;
+  }
+  .image{
+    width: 100%;
+  }
 }
 
 @media (max-width: 760px){
@@ -328,5 +359,11 @@ tr:last-child.last-one{
   }
   .card-val-3{
     width: 80%;
+  }
+  .image-view{
+    width: 100%;
+  }
+  .image{
+    width: 100%;
   }
 }
